:bug: Fixing overflowing

--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -1,3 +1,8 @@
+body{
+    overflow-x: hidden !important;
+    max-width: 100%;
+}
+
 .details_container{
     display: flex;
     flex-direction: row;
